--- a/proposal/aux.bib
+++ b/proposal/aux.bib
@@ -4,3 +4,24 @@
     year    = "2014",
     note    = "Unpublished work, resubmission soon"
 }
+@software{capnproto,
+  author = {{Kenton Varda}},
+  title = {Cap'n Proto},
+  url = {https://capnproto.org},
+  version = {0.5.2},
+  date = {2015-04-13},
+}
+@software{rust,
+  author = {{Mozilla Foundation}},
+  title = {Rust Programming Language},
+  url = {http://www.rust-lang.org},
+  version = {1.0.0},
+  date = {2015-04-15},
+}
+@software{protobuf,
+  author = {{Google}},
+  title = {Protocol Buffers},
+  url = {https://developers.google.com/protocol-buffers/},
+  version = {2.6.0},
+  date = {2014-10-20},
+}
