--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,7 +1,6 @@
 \documentclass[12pt,draft]{cmuthesis}
 \usepackage{silence}
 \WarningFilter*{latex}{Marginpar on page \thepage\space moved}
-\usepackage{fullpage}
 \usepackage{todonotes}
 \usepackage{syntax}
 \usepackage{amsmath}
@@ -9,12 +8,11 @@
 \usepackage{subfigure}
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
-\usepackage{autofe}
 \usepackage{enumitem}
 \usepackage[numbers,sort]{natbib}
 \usepackage[letterpaper,twoside]{geometry}
 \usepackage{changepage}
-\usepackage{listings}
+\usepackage[final]{listings}
 \lstset{numbers=left}
 \draftstamp{\today}{DRAFT}
 
@@ -29,11 +27,12 @@
 %my eyes, so we'll turn it on later.
 %\usepackage{setspace}
 %\doublespacing
-%\usepackage[
-%  backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered
-%]{hyperref}
-%\hypersetup{linktoc=all}
-\newcommand{\url}[1]{\texttt{#1}}
+\usepackage[
+  backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered
+]{hyperref}
+\hypersetup{linktoc=all}
+
+\usepackage{autofe}
 
 \include{ll}
 \begin{document}
