Enable hyperref linking

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -28,7 +28,8 @@
 %\usepackage{setspace}
 %\doublespacing
 \usepackage[
-  backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered
+  backref,pageanchor=true,plainpages=false, pdfpagelabels, bookmarks,bookmarksnumbered,
+  final
 ]{hyperref}
 \hypersetup{linktoc=all}
 
