--- a/proposal/holmes.tex
+++ b/proposal/holmes.tex
@@ -157,6 +157,9 @@ More concretely, consider the program in Figure~\ref{fig:simpprog}
 Here we pretend that all instructions are 1 byte long for simplicity of addressing.
 Starting with a simple recursive disassembly, we get the partial CFG in Figure~\ref{fig:cfg0}.
 \begin{figure}
+        \begin{center}
+                \includegraphics[scale=0.5]{cfg.pdf}
+        \end{center}
         \caption{Initial CFG}
 \label{fig:cfg0}
 \end{figure}
