--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,3 +1,4 @@
+\RequirePackage[final]{graphicx}
 \documentclass[12pt,draft]{cmuthesis}
 \usepackage{silence}
 \WarningFilter*{latex}{Marginpar on page \thepage\space moved}
