--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -71,7 +71,7 @@ Manuel Egele, Boston University
 \clearpage
 
 \begin{abstract}
-\input{abstract.tex}
+        {\small \input{abstract.tex}}
 \end{abstract}
 
 %\begin{acknowledgements}
