--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -4,26 +4,29 @@ This thesis is focused on the interleaving, interaction, and scheduling of analy
 %Compiled code, sans source, is everywhere
 Most commercial software tends to come in the form of a compiled binary sans source.
 %Compiled code needs to be analyzable
-This software needs to be analyzable in order to allow for security audits of libraries and executables, continued use of legacy code, and attack development.
+In order to perform security audits of libraries and executables, continue the use of legacy code, and develop attacks, we need the ability to analyze this software.
 %This is difficult because binaries are turing complete, and even "well behaved" code does crazy shit
-Analysis of compiled code provides a number of unique challenges due to the stripping away of information the original programmer had access to, such as intended control flow information, types, and variable locations.
+When code is compiled, it strips away information the original programmer had access to, such as intended control flow, types, and variable locations.
+Software analyzing compiled code faces a number of unique challenges as a direct consequence of dropping information during the compilation process.
 %General statement about how we can help?
-A wide variety of techniques for attacking this problem from different angles have been developed, but are typically resource intensive and not integrated with one another.
+Researchers have developed a wide variety of techniques for attacking this problem from different angles have been developed, but are typically not integrated with one another.
 %Previous Work
-%VSA
-%Jakstab
-%Types shit
 Previous work in analyzing binary code has performed type recovery~\cite{bitr}, variable identification~\cite{divine}, control flow recovery~\cite{jakstab,phoenix}, and value analysis~\cite{vsa}.
-However, this work tends to have issues with the relative expense of running the analyses, the coupling between analyses, and the integration of the current state of the art in each area.
-Co-dependency of analyses becomes more relevant within the realm of binary analysis in particular because abstractions designed for independent reasoning have been stripped away.
-While this is most prevalent in control flow analysis, it finds its way into nearly every part of binary analysis.
+However, previous work tended to focus on one or two specific questions at a time rather than holistic analysis.
+Without traditional programming abstractions designed to allow for modular reasoning, co-dependent analyses become more important to understanding the program.
+Type recovery depends on dataflow information\cite{bitr,tie,sndwrite}, which in turn depends on control flow.
+Recovering non-trivial control flow requires value analysis to resolve jump targets.
+One variety of value analysis (alias analysis) is sometimes done using type information.\footnote {
+  \url{http://llvm.org/docs/doxygen/html/TypeBasedAliasAnalysis_8cpp_source.html}
+}
+While co-dependency is most prevalent in control flow analysis, it finds its way into nearly every part of binary analysis.
 
-I intend to show that integrating codependent binary analyses via logic language yields higher quality results and simpler integration efforts.
+I intend investigate the effects of integrating codependent binary analyses result quality, and how using logic language to do this affects progammer burden.
 %This is Holmes
-To do this, I intend to build \sysname, a logic language inspired by Datalog with features geared towards the ability to use a logic program as a means of coordinating independent analyses.
-I hope to use this system to demonstrate how the use of logic languages for communication can make writing interdependent analyses easier.
+To do this, I intend to build \sysname, a system implementing a logic language inspired by Datalog with features geared towards the ability to use a logic program as a means of coordinating independent analyses.
+I will to use this system to investigate how the use of logic languages to describe the dependency between analyses can make writing interdependent analyses easier.
 I want to explore the formal properties of the \sysname\ language, specifically with respect to termination and monotonicity of reasoning off subsumed facts.
 I will also evaluate the power of combining analyses via \sysname\ which have been traditionally examined separately.
 %Work Plan
-\sysname\ will provide a way to mesh existing styles of analysis together, taking into account the potential for nontermination or high cost of analyses.
-This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses to achieve better results than they could achieve alone.
+I will design \sysname\ with the goal of providing a way to mesh existing styles of analysis together, taking into account the potential for nontermination or high cost analyses.
+This thesis will provide semantics for the \sysname\ language, an implementation of a program which actually runs the language, and example applications coordinating multiple analyses.
