--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -10,61 +10,61 @@
 % * Data cycling doesn't occur
 %
 % * Can a tailored logic language solve this problem?
+Poorly or maliciously coded software can cause significant damage.
 The bulk of modern software is distributed in binary-only form, for reasons ranging from a desire to keep proprietary information secret to wanting to avoid compilation or interpretation overhead on the client.
-Given that these programs are given privileges to act on behalf of the user, either poorly or maliciously coded software can cause significant damage.
 Unfortunately, inspecting the behavior of machine code is a known difficult problem:
-It is undecidable for pathological cases,\footnote{\
+It is undecidable for pathological cases\footnote{\
         Rice's theorem gives this, assuming we ignore the technically finite size of memory.
-} and difficult to approximate in common ones.
- 
-Existing tools\cite{ida} tend to be designed as a sequence of analyses to perform, with the results of each previous analysis being available to the next as some form of data structure.
-This model is essentially an ad-hoc form of LLVM\cite{llvm}'s pass model.
-Since these tools lack any framework for integrating with each other, they have to deal with a variety of pitfalls.
+}, and difficult to approximate in common ones.
+
+Existing tools~\cite{ida, bap, bitblaze, bindead} tend to be designed as a sequence of analyses to perform, with the results of each previous analysis being available to the next.
+In this model, the analysis authors manually acquire the inputs for their analysis, determine where in the sequence to run it, and where to put the outputs.
+If we consider a graph with nodes representing analyses, and edges representing dependency ordering, this model forms a line.
+The line model is essentially an ad-hoc form of LLVM\cite{llvm}'s pass model.
+In LLVM's pass model, each pass declares what analyses it depends upon, allowing the LLVM pass manager to ensure the necessary steps are performed and allow a configurable pipeline.
+Considering the graph representation again, LLVM's model looks more like a DAG.
+Jakstab~\cite{jakstab} takes the approach of running their analyses to fixpoint.
+As jakstab does not explicitly encode dependencies between analysis, the graph for this looks like a single cycle.
+A natural extension then is to allow the expression of dependencies, as in LLVM, but also cycles, as in Jakstab.
+This full graph model of analysis management is what I intend to investigate in my thesis.
 
 % Past work sets the stage for / encourages this
 Previous work in program analysis suggests that logic languages can help to structure this problem.
 % * Datalog/prolog as a program analysis tool
-Datalog has previously been successfully used to analyze programs\cite{Lam2005a, Brumley2006b, Alpuente2011, Smaragdakis, Whaley2007}. 
+Datalog has previously been successfully used to analyze programs~\cite{Lam2005a, Brumley2006b, Alpuente2011, Smaragdakis, Whaley2007}.
 %   * Shows fact-like representation of program properties is feasible
 While the ability to write analyses directly in logic language is interesting, of more potential importance to the feasability of this project is that they were able to model both their input and output knowledge as logic language predicates successfully.
-A wide variety of properties from aliasing in binary code\cite{Brumley2006b} to security properties such as SQL injectability and XSS\cite{Lam2005a} have been modeled as facts in a deductive database, suggesting this as a potential common representation. 
-Dataflow analyses are also well representable\cite{McAllester} in this way.
-
-%   * Natural way to describe incremental information buildup
-Logic languages also provide a natural way to describe incremental discovery of new information.
-In a traditional stateful approach to representing new information some analyses may consume old information and never consume the update.
-When analyses expressed as logical rules, it is clear exactly when newly discovered information can be usefully consumed.
-% It'd be nice to have research to cite, but people don't seem to have considered logic language incrementally
+A wide variety of properties from aliasing in binary code~\cite{Brumley2006b} to security properties such as SQL injectability and XSS~\cite{Lam2005a} have been modeled as facts in a deductive database, suggesting this as a potential common representation.
+Dataflow analyses are also representable~\cite{McAllester} in this way.
 
 % * Analysis Integration improved results
 As using a logic language to describe the analysis process gives us both a common representation for information and the ability to see which analyses can and should be run when, integration should be easier.
 %   * Jakstab
-Jakstab\cite{jakstab} is one example where simply integrating two analyses (value analysis and control flow recovery/disassembly) lead to substantially better results.
+Jakstab~\cite{jakstab} is one example where simply integrating two analyses (value analysis and control flow recovery/disassembly) lead to better results than IDA for jump resolution.
 If both analyses had been specified as logical rules within the same environment, the additional power Jakstab found by integrating them would have come for free.
+
 %   * Compositional May Must
-Similarly, \textsc{Smash}\cite{maymust} combined two previous techniques for proving program properties: may analysis and must analysis.
-May-analysis derives facts about procedures stating that if a given property holds on an input, a separate property holds at the output (traditionally corresponding to static analysis).
-Must-analysis derives facts stating that within a given set of inputs, there exists at least one that goes to each of a given set of outputs (traditionally corresponding to dynamic analysis).
+Similarly, \textsc{Smash}~\cite{maymust} combined two \textsc{Dash}'s~\cite{dash} may and must analysis.
+\textsc{Dash}-may-analysis derives facts about procedures stating that if a given property holds on an input, a separate property holds at the output.
+\textsc{Dash}-must-analysis derives facts stating that within a given set of inputs, there exists at least one that goes to each of a given set of outputs.
 The authors were able to prune a number of search paths via this combination, leading to property checks terminating which previously took too long to be feasible to run.
 With a (backwards-chaining\footnote{Goal driven execution, more explanation in \S\ref{sec:bchain}}) representation of may and must analyses separately, their analysis could be derived by adding a relatively small number of rules to describe the yes/no property check fact they introduce.
 
 % External code
 Using a fairly common extension of logic language, we can even call out to code not written as logical rules\footnote{We will use a system similar to external predicates \S\ref{sec:extpred}}.
 This makes it possible to repurpose previously written analyses, or to write new analyses which may not be best represented as rules.
-There are still some restrictions on how such code can operate (e.g.\ no preserved state across calls) but taking this approach gives the flexibility to be an integration system.
-Without this, a substantial amount of reimplementation would need to occur, and it would be unlikely that new analysis authors would choose to use this approach if they were not already familiar with logic language.
+There are still some restrictions on how such code can operate (for example, no preserved state across calls) but taking this approach gives the flexibility to be an integration system.
 
 \begin{inset}
 {\bf Thesis statement.}
-Integrating codependent binary analyses via logic language yields higher quality results and simpler integration efforts.
+Codependence in binary program analysis can be represented in a logic language framework that allows for formal reasoning.
 \end{inset}
-
 % Roadmap to defending the thesis statement
-\section{Defense Roadmap}
+\section{Thesis Roadmap}
 % * Show the power by
 %   * Implementing the integration of several real analyses using the language
 %   * Attempting to do so without using circumscription or aggregation, and seeing what happens.
-I will seek to show the practicality of this approach by implementing \sysname, a logic language engine designed for the integration of binary analyses.
+I will seek to investigate this approach by implementing \sysname, a logic language engine designed for the integration of binary analyses.
 I will also implement and integrate several real analyses using \sysname.
 This implementation should provide evidence for feasibility of this technique and provide a model for checking result quality.
 
@@ -97,7 +97,7 @@ In the case of CFG recovery, I anticipate success even more strongly than in the
 The main contributions of this work will be:
 \begin{itemize}
         \item Monotonic Aggregators --- adding the ability to efficiently reason about collections of facts in a single rule invocation while not breaking monotonicity.
-        \item Hypothetical Circumscription --- giving a ``stuck'' or incomplete system an Occam's razor motivated set of assumptions to allow it to proceed hypothetically, re-examining the plausibility of the hypotheses when necessary. 
+        \item Hypothetical Circumscription --- giving a ``stuck'' or incomplete system an Occam's razor motivated set of assumptions to allow it to proceed hypothetically, re-examining the plausibility of the hypotheses when necessary.
         \item Study of interaction between binary analysis techniques --- using \sysname\ to quantitatively examine combinations of existing analyses for improvements in performance or efficiency.
         \item A practical system implementation --- designing \sysname\ such that it is stable, efficient, and usable enough to see continued use after the completion of this thesis.
 \end{itemize}
